fix: improve page no items and fix layout bugs

--- a/src/app/features/list/components/no-items/no-items.component.scss
+++ b/src/app/features/list/components/no-items/no-items.component.scss
@@ -1,3 +1,19 @@
-.centralize-message{
+.no-items-container{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  font-size: x-large;
+  flex: 1;
+  width: 100%;
+}
+
+.no-items-icon{
+  flex: 1;
+  width: 15%;
+  height: 15%;
+}
+
+.no-items-container p {
   text-align: center;
+  margin-top: 8px;
 }
